Certificate changed, headings added to table of contents, pictures are put opposite to chapter starts, tabbed alignment used for math calculations, blank pages are added for diffrent chapters - clinical chapters also contain blankpages for case writing

--- a/customTOC.tex
+++ b/customTOC.tex
@@ -4,6 +4,8 @@
  \usepackage[a4paper, left=1.5in,right=.7in,top=2cm,bottom=1.5cm]{geometry} \begin{document}
 
 \pagenumbering{gobble}
+\begin{center}
+ \huge Hematology \end{center}
 \begin{table}[H]
  \renewcommand{\arraystretch}{2.5} \centering
  \resizebox{\textwidth}{!}{%
@@ -13,44 +15,46 @@
 1 & & Compound Microscope & & 1 \\ \hline
 2 & & Hemocytometer & & 5 \\ \hline
 3 & & Estimation Of Total RBC Count & & 9 \\ \hline
-4 & & Estimation Of Total WBC Count & & 11 \\ \hline
-5 & & Absolute Eosinophil Count & & 13 \\ \hline
-6 & & Hemoglobin Estimation & & 15 \\ \hline
-7 & & Differential Count & & 17 \\ \hline
-8 & & Blood Grouping \& Typing & & 20 \\ \hline
-9 & & Estimation Of Bleeding Time & & 22 \\ \hline
-10 & & Estimation Of Clotting Time & & 24 \\ \hline
-11 & & Estimation Of Erythrocyte Sedimentation Rate & & 26 \\ \hline
-12 & & Packed Cell Volume & & 28 \\ \hline
-13 & & Osmotic Fragility & & 30 \\ \hline
-14 & & Specific Gravity & & 32 \\ \hline
+4 & & Estimation Of Total WBC Count & & 12 \\ \hline
+5 & & Absolute Eosinophil Count & & 15 \\ \hline
+6 & & Differential Count & & 18 \\ \hline
+7 & & Hemoglobin Estimation & & 22 \\ \hline
+8 & & Blood Grouping \& Typing & & 24 \\ \hline
+9 & & Estimation Of Bleeding Time & & 26 \\ \hline
+10 & & Estimation Of Clotting Time & & 28 \\ \hline
+11 & & Estimation Of Erythrocyte Sedimentation Rate & & 30 \\ \hline
+12 & & Packed Cell Volume & & 32 \\ \hline
+13 & & Osmotic Fragility & & 34 \\ \hline
+14 & & Specific Gravity & & 36 \\ \hline
 \end{tabular}
  }
  \end{table}
 
 \newpage
 
+\begin{center}
+ \huge Clinical Physiology \end{center}
 \begin{table}[H]
  \renewcommand{\arraystretch}{2.5} \centering
  \resizebox{\textwidth}{!}{%
  \begin{tabular}{|c|l|p{3in}|l|c|}
  \hline
 \textbf{S.No} & \textbf{Date} & \centering \textbf{Experiment} & \textbf{Signature} & \textbf{Page} \\ \hline
-1 & & General Examination & & 35 \\ \hline
-2 & & Examination Of Respiratory System & & 40 \\ \hline
-3 & & Respiratory Efficiency Test & & 47 \\ \hline
-4 & & Spirometry & & 49 \\ \hline
-5 & & Stethography & & 51 \\ \hline
-6 & & Examination of the Arterial Pulse & & 53 \\ \hline
-7 & & Examination Of Cardiovascular System & & 57 \\ \hline
-8 & & Recording of Blood Pressure & & 61 \\ \hline
-9 & & Effects of Posture and Exercise on Blood Pressure & & 64 \\ \hline
-10 & & Examination Of Sensory System & & 67 \\ \hline
-11 & & Examination Of Motor System & & 73 \\ \hline
-12 & & Reflexes & & 80 \\ \hline
-13 & & Cerebellar Function Tests & & 85 \\ \hline
-14 & & Examination Of Cranial Nerves (1-6) & & 88 \\ \hline
-15 & & Examination Of Cranial Nerves (7-12) & & 94 \\ \hline
+1 & & General Examination & & 39 \\ \hline
+2 & & Examination Of Respiratory System & & 46 \\ \hline
+3 & & Respiratory Efficiency Test & & 55 \\ \hline
+4 & & Spirometry & & 58 \\ \hline
+5 & & Stethography & & 61 \\ \hline
+6 & & Examination of the Arterial Pulse & & 64 \\ \hline
+7 & & Examination Of Cardiovascular System & & 71 \\ \hline
+8 & & Recording of Blood Pressure & & 78 \\ \hline
+9 & & Effects of Posture and Exercise on Blood Pressure & & 81 \\ \hline
+10 & & Examination Of Sensory System & & 85 \\ \hline
+11 & & Examination Of Motor System & & 93 \\ \hline
+12 & & Reflexes & & 103 \\ \hline
+13 & & Cerebellar Function Tests & & 111 \\ \hline
+14 & & Examination Of Cranial Nerves (1-6) & & 117 \\ \hline
+15 & & Examination Of Cranial Nerves (7-12) & & 126 \\ \hline
 \end{tabular}
  }
  \end{table}
