--- a/firstPageAndCertificate.tex
+++ b/firstPageAndCertificate.tex
@@ -34,6 +34,7 @@
 
 	\rule{4in}{0.5pt}
 	\parbox{3.9in}{\centering AFFILIATED TO\\ THE TAMILNADU Dr. M.G.R. MEDICAL UNIVERSITY, CHENNAI-32.}
+	\vspace{2mm}
 	\rule{4in}{0.5pt}
 	
 	{\centering \LARGE{PHYSIOLOGY\\ RECORD NOTEBOOK}}
@@ -77,15 +78,16 @@ Year of Admission& :& \rule{4in}{.5pt} \\
 \begin{table}[H]
  \renewcommand{\arraystretch}{.6} \centering
  \resizebox{\textwidth}{!}{%
-	 \begin{tabular}{p{.65\textwidth}p{.35\textwidth}}
+	 \begin{tabular}{p{.55\textwidth}p{.45\textwidth}}
 		 \textbf{Asst.Professor}, &\textbf{Professor \& Head,}\\ 
-		 \textbf{Department of Physiology} &\textbf{Department of Physiology} 
+		 \textbf{Department of Physiology} &\textbf{Department of Physiology}\\ 
+		 \textbf{KAPV Govt Medical College} &\textbf{KAPV Govt Medical College}
 \end{tabular}
  }
  \end{table}
 
 \noindent \textbf{Date} :\\
-\textbf{Place}:\\
+\textbf{Place}: Tiruchirapalli\\
 \vspace*{\fill}
 \end{document}
 
